@@ -55,6 +55,10 @@ RELEASE 0.96.96 - XXX
 
   - Remove hard-coded dependency on Python 2.2 from Debian packaging files.
 
+  From Jeff Mahovsky:
+
+  - Handle spaces in the build target name in Visual Studio project files.
+
   From Matthias Troffaes:
 
   - Don't re-run TeX if the triggering strings (\makeindex, \bibliography
